# langchain-test

./: README.md  justfile  main.py  pyproject.toml
langchain_test/: test1.py  test_ollama.py
